--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,11 +1,14 @@
 @import "./base.css";
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+body {
+  display: flex;
+  align-items: center;
+  background-color: #f5f5f5;
+}
 
-  font-weight: normal;
+#app {
+  width: 100%;
+  margin: 0 auto;
 }
 
 a,
@@ -13,16 +16,18 @@ a,
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
   transition: 0.4s;
+  cursor: pointer;
 }
 
 @media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
+ /* a:hover {
+    background-color: hsla(197, 100%, 37%, 0.2);
+    
+  } */
 }
 
 @media (min-width: 1024px) {
-  body {
+/*  body {
     display: flex;
     place-items: center;
   }
@@ -32,4 +37,5 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+  */
+} 
