--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,7 +3,9 @@
 body {
   display: flex;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #f0f4ff;
+  background-image: linear-gradient(0deg, #f0f4ff 65%, #fffaf0 99%);
+  
 }
 
 #app {
@@ -11,31 +13,13 @@ body {
   margin: 0 auto;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+  color: #3b5f96;
   transition: 0.4s;
   cursor: pointer;
 }
 
-@media (hover: hover) {
- /* a:hover {
-    background-color: hsla(197, 100%, 37%, 0.2);
-    
-  } */
+a:hover {
+  color: #142457;
 }
-
-@media (min-width: 1024px) {
-/*  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
-  }
-  */
-} 
