--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,21 +5,21 @@ body {
   align-items: center;
   background-color: #f0f4ff;
   background-image: linear-gradient(0deg, #f0f4ff 65%, #fffaf0 99%);
-  
-}
 
-#app {
-  width: 100%;
-  margin: 0 auto;
 }
 
 a {
   text-decoration: none;
-  color: #3b5f96;
+  color: #465fa8;
   transition: 0.4s;
   cursor: pointer;
 }
 
 a:hover {
-  color: #142457;
+  color: #1C2541;
+}
+
+#app {
+  width: 100%;
+  margin: 0 auto;
 }
