--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -5,7 +5,7 @@ body {
   align-items: center;
   background-color: #f0f4ff;
   background-image: linear-gradient(0deg, #f0f4ff 65%, #fffaf0 99%);
-
+  color: #2c3e50;
 }
 
 a {
